--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     grid-template-columns: 33% 33% 33%;
     grid-template-rows: 33% 33% 33%;
     max-width: 300px;
+    background-color: #0000;
 }
 
 .tile {
